--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,6 +22,9 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
     "typescript": "4.8.4"
   }
 }
