--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
