--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-redux": "^7.1.24",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,7 +28,6 @@
     "eslint-config-next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "react-redux": "^8.0.4",
-    "redux": "^4.2.0",
     "typescript": "4.8.4"
   }
 }
